# Docs-that-run

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: evals.yml
app/: main.py
app/static/: index.html
app/static/fonts/: NOTICE.txt
data/corpus/: pydantic_corpus.jsonl
data/golden/: golden_set.jsonl  unanswerable.jsonl
docsthatrun/: __init__.py  __main__.py  answer.py  cache.py  cli.py  config.py  corpus.py  llm.py  observability.py  ratelimit.py  retrieve.py  sandbox.py  schema.py
docsthatrun/evals/: metrics.py  run_evals.py
scripts/: setup_sandbox.sh
tests/: test_app.py  test_cache.py  test_cli.py  test_config.py  test_evals.py  test_observability.py  test_ratelimit.py  test_retrieve.py  test_robustness.py  test_sandbox.py
