[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docsthatrun"
version = "0.3.0"
description = "Version-aware documentation RAG with execution-graded answers (Pydantic v1 -> v2)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = []  # core is standard-library only

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
server = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.6"]

[project.scripts]
docsthatrun = "docsthatrun.cli:main"

[tool.setuptools]
packages = ["docsthatrun", "docsthatrun.evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
# Put the repo root on sys.path so `docsthatrun` / `app` import under the bare
# `pytest` console script (CI), not only under `python -m pytest` (which adds the
# CWD itself). Without this, CI collection fails with ModuleNotFoundError.
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Correctness-focused: pyflakes (F), pycodestyle (E/W), import order (I),
# flake8-bugbear (B). Pyupgrade (UP) is intentionally off — the codebase targets
# 3.9 and the modernizations are churn, not correctness.
select = ["E", "F", "W", "I", "B"]
